added DTO to get all students route eliminating the use of Json Managed Reference